<resources>
    <string name="string_0">0</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_point">.</string>
    <string name="string_plus">+</string>
    <string name="string_minus">-</string>
    <string name="string_multiply">*</string>
    <string name="string_divide">:</string>
    <string name="string_equals">=</string>
    <string name="app_name">Calculator</string>
    <string name="string_clear">Очистить</string>
    <string name="style1">Стиль 1</string>
    <string name="style2">Стиль 2</string>
    <string name="BackGround">Фон</string>
    <string name="btSettings">Настройки</string>
    <string name="dog">Пёс</string>
    <string name="cat">Кот</string>
</resources>